# druid-material-icons

./: Cargo.toml  test.sh
druid-icons/: Cargo.toml
druid-icons/src/: lib.rs
generate-icons/: Cargo.toml
generate-icons/src/: lib.rs  main.rs
generate-material-icons/: Cargo.toml
generate-material-icons/src/: find.rs  main.rs
src/: lib.rs
