[package]
name = "druid-material-icons"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[dependencies]
druid = "^0.6"

druid-icon = { git = "https://github.com/chris-zen/kiro-synth", branch = "modulations" }

[workspace]
members = [
    ".",
    "generate-icons",
]
